--- a/index.html
+++ b/index.html
@@ -1,17 +1,22 @@
-<<<<<<< HEAD
 <html>
 <body>
 <h1>Nithyasree Sampath</h1>
-<p>nsampat1@ucsc.edu                                              www.linkedin.com/in/nithyasreesampath</p>
-<p>(408) 747-9797                                                 https://github.com/nithyaSampath</p>            
-<p>San Jose CA 95129                                              https://nsampat1.github.io</p>
+<p>nsampat1@ucsc.edu</p>
+<p>www.linkedin.com/in/nithyasreesampath</p>
+<p>(408) 747-9797</p>
+<p>https://github.com/nithyaSampath</p>            
+<p>San Jose CA 95129</p>
+<p>https://nsampat1.github.io</p>
 <p>-------------------------------------------------------------------------------------------</p>
 <p>Passionate, self-motivated Software Engineer proficient in C++/C and Python.</p>
 <h2>Education</h2>                 
-<p>University of California Santa Cruz|Santa Cruz, California     09/2022-Present</p>
+<p>University of California Santa Cruz|Santa Cruz, California</p>
+<p>09/2022-Present</p>
 <p>MS in Computer Science and Engineering</p>
-<p>San Jose State University|San Jose, California                 08/2020-05/2022</p>
-<p>BS in Computer Science                                         GPA: 3.48/4.00</p>
+<p>San Jose State University|San Jose, California</p>
+<p>08/2020-05/2022</p>
+<p>BS in Computer Science</p>
+<p>GPA: 3.48/4.00</p>
 <p>Dean’s Scholar Recipient</p>            
 <h2>Coursework</h2>                     
 <p>Computer Architecture, Formal Language and Computability, Database Management Systems, Data Structures & Algorithms, Object Oriented Design, Operating Systems, Software Engineering, Programming Paradigms, Advanced C++, Advanced Python, Mobile Device Development, Intro to AI, NoSQL Databases, Information Security, Analysis of Algorithms (Fall 2022), Computer Architecture (Fall 2022)</p>                         
