--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <html>
 <body>
 <h1>Nithyasree Sampath</h1>
+<h2>Contact Information: </h2>
 <p>nithyasree.sampath@gmail.com</p>
+<h2>Privacy Policy</h2>
+<p>09/10/2024</p>
+<p>The app takes the following information: </p>
+<p>Photos and Videos from the device's photo library</p>
+<p>The app uses this information in order to provide you with features that will display this information back to you.</p>
+<p>This information is stored within the app's storage but is only available until the app is removed from the device.</p>
+<p>This privacy policy may change in the future as the app gets updated. Please review the privacy policy every so once in a while.</p>
+<p>If you are uncomfortable with the contents of this privacy policy, it is your decision to not use the app or this website.</p>
+<p>If you continue to use the app or this website, that means that you have agreed to this privacy policy.</p>
 </body>
 </html>
