--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <h2>Privacy Policy</h2>
 <p>09/10/2024</p>
 <p>The app takes the following information: </p>
-<p>Photos and Videos from the device's photo library</p>
+<h3>Photos and Videos from the device's photo library</h3>
 <p>The app uses this information in order to provide you with features that will display this information back to you.</p>
 <p>This information is stored within the app's storage but is only available until the app is removed from the device.</p>
 <p>This privacy policy may change in the future as the app gets updated. Please review the privacy policy every so once in a while.</p>
